FIX: Link columns not working on firefox

--- a/public/css/components.css
+++ b/public/css/components.css
@@ -1,27 +1,36 @@
 /*ScrollBox*/
+
 div.scrollbox {
-  overflow: auto; }
+  overflow: auto;
+}
 
 div.scrollbox.no-x {
   overflow-y: auto;
-  overflow-x: hidden; }
+  overflow-x: hidden;
+}
 
 div.scrollbox.no-y {
   overflow-x: auto;
-  overflow-y: hidden; }
+  overflow-y: hidden;
+}
 
 @media screen and (max-width: 1024px) {
   div.scrollbox {
     overflow: scroll;
-    max-width: 100%; }
+    max-width: 100%;
+  }
   div.scrollbox.no-x {
     overflow-y: scroll;
-    overflow-x: hidden; }
+    overflow-x: hidden;
+  }
   div.scrollbox.no-y {
     overflow-x: scroll;
-    overflow-y: hidden; } }
+    overflow-y: hidden;
+  }
+}
 
 /*Cookie Notice*/
+
 .cookie {
   position: fixed;
   bottom: 0;
@@ -30,31 +39,38 @@ div.scrollbox.no-y {
   max-width: 90%;
   width: 500px;
   height: auto;
-  z-index: 999; }
+  z-index: 999;
+}
 
 /*Back to Top*/
+
 .back-to-top {
   position: fixed;
   bottom: 3rem;
   right: 3rem;
   z-index: 999;
-  transition: opacity 1s; }
+  transition: opacity 1s;
+}
 
 .back-to-top.hide {
   opacity: 0;
-  cursor: default; }
+  cursor: default;
+}
 
 .back-to-top #label {
   margin-left: 0.5rem;
-  margin-right: 0.5rem; }
+  margin-right: 0.5rem;
+}
 
 /*Index*/
+
 .index {
   font-size: 1rem;
   padding: 2rem;
   float: right;
   margin: 0rem 0rem 1rem 3rem;
-  min-width: 20rem; }
+  min-width: 20rem;
+}
 
 @media screen and (max-width: 768px) {
   .index {
@@ -62,39 +78,56 @@ div.scrollbox.no-y {
     padding: 2rem;
     float: none;
     margin: 0rem 0rem 1rem 0rem;
-    max-width: 100%; } }
+    max-width: 100%;
+  }
+}
 
 .breadcrumb-container {
-  margin: 0rem 0 3rem 0; }
+  margin: 0rem 0 3rem 0;
+}
 
-.breadcrumb-container li + li {
-  margin-top: 0rem !important; }
+.breadcrumb-container li+li {
+  margin-top: 0rem !important;
+}
 
 .breadcrumb-container ul {
-  margin-top: 1em; }
+  margin-top: 1em;
+}
 
 section.sponsors {
-  padding: 1rem; }
+  padding: 1rem;
+}
 
 section.sponsors .sponsor {
   margin-right: 3em;
   display: inline-block;
   position: relative;
-  top: 1rem; }
+  top: 1rem;
+}
 
 section.sponsors .sponsor.has-background {
   background: white;
   padding: 1em;
-  top: 0rem; }
+  top: 0rem;
+}
 
 section.sponsors .sponsor img {
-  height: 100px; }
+  height: 100px;
+}
 
 section.sponsors .sponsor.has-background img {
-  height: calc(100px - 2rem); }
+  height: calc(100px - 2rem);
+}
 
 section.section .links {
   max-height: 170px;
   overflow-wrap: normal;
   column-count: 3;
-  column-fill: auto; }
+  column-fill: balance;
+}
+
+@media screen and (max-width: 400px) {
+  section.section .links {
+    column-count: 1;
+  }
+}
