--- a/public/css/modifiers.css
+++ b/public/css/modifiers.css
@@ -2,43 +2,58 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%); }
+  transform: translate(-50%, -50%);
+}
 
 .center-screen-horizontal {
   position: absolute;
   left: 50%;
-  transform: translate(-50%, 0); }
+  transform: translate(-50%, 0);
+}
 
 .center {
-  text-align: center; }
+  text-align: center;
+}
 
 .radio-control {
-  margin-bottom: 1em; }
+  margin-bottom: 1em;
+}
 
 .max-h-100 {
-  max-height: 100px; }
+  max-height: 100px;
+}
 
 .max-h-200 {
-  max-height: 200px; }
+  max-height: 200px;
+}
 
 .max-h-500 {
-  max-height: 500px; }
+  max-height: 500px;
+}
 
 .max-w-100 {
-  max-width: 100px; }
+  max-width: 100px;
+}
 
 .max-w-200 {
-  max-width: 200px; }
+  max-width: 200px;
+}
 
 .max-w-500 {
-  max-width: 500px; }
+  max-width: 500px;
+}
 
 @media screen and (max-width: 768px) {
   .max-w-100 {
-    max-width: 90%; }
+    max-width: 90%;
+  }
   .max-w-200 {
-    max-width: 90%; }
+    max-width: 90%;
+  }
   .max-w-500 {
-    max-width: 90%; }
+    max-width: 90%;
+  }
   .content img {
-    max-width: 90%; } }
+    max-width: 90%;
+  }
+}
